# cftc-mandats

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/apps/dashboard/: views.py
backend/apps/dashboard/templates/: dashboard.html
backend/apps/mandascop/: admin.py  apps.py  models.py
backend/apps/mandascop/migrations/: 0001_initial.py  0002_initial.py
backend/apps/mandat/: admin.py  apps.py  models.py
backend/apps/mandat/migrations/: 0001_initial.py  0002_initial.py
backend/apps/mandataire/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/mandataire/migrations/: 0001_initial.py  0002_adresse_alter_mandataire_adresse.py
backend/apps/mandataire/templates/: mandataire_detail.html  mandataire_form.html  mandataire_list.html
backend/apps/organisme/: admin.py  apps.py  models.py
backend/apps/organisme/migrations/: 0001_initial.py  0002_alter_organisme_reseau_delete_reseau.py
backend/apps/reseaux/: apps.py  models.py
backend/apps/reseaux/migrations/: 0001_initial.py
backend/apps/user/: admin.py  models.py
backend/apps/user/migrations/: 0001_initial.py  0002_militant.py
backend/config/: settings.py  urls.py
backend/templates/account/: login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html
backend/templates/base/: base.html  footer.html  home.html  navbar.html
